--- a/src/reactImageFetcher/styles/App.css
+++ b/src/reactImageFetcher/styles/App.css
@@ -26,8 +26,9 @@
 }
 
 .photoframe img{
-  
-    border: 4px solid rgb(250, 0, 0);
+  padding: 20px;
+  margin-bottom: 20px;
+    border: 2px solid #282626;
 }
 .caption{
     background-color: black;
